# django-fastapi-perf

./: Dockerfile  README.md  entrypoint.sh  locustfile.py  pyproject.toml
django/config/: settings.py  urls.py
django/perf/: urls.py  views.py
fastapi/: main.py
